--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "icons": "^1.0.0",
+    "lucide": "^0.274.0",
+    "lucide-react": "^0.274.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
