--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/themes": "^1.1.2",
     "@types/node": "20.5.7",
